--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ services:
   - postgresql
 before_script:
   - psql -c 'create database bnativus_test;' -U postgres
-script: 
+script:
   - RAILS_ENV=test bundle exec rake db:migrate --trace
   - bundle exec rake db:test:prepare
   - bundle exec rspec spec/
-
-
+notifications:
+  email: false
