Config cloudinary variables

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 DB_HOST=db
 DB_USER=postgres
 DB_PASSWORD=
+
+CLOUD_NAME_CLOUDINARY=dhamvvsv4
+API_KEY_CLOUDINARY=779513753741769
+API_SECRET_CLOUDINARY=veGdSOV4GC09czauAI4upj5Dd94
