--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,15 @@
-POSTGRES_HOST=db
-POSTGRES_USER=
-POSTGRES_PASSWORD=super_secure
+DB_HOST=db
+DB_USER=postgres
+DB_PASSWORD=
 
-SECRET_KEY_BASE_DEV=development_secret
-SECRET_KEY_BASE_TEST=test_secret
+CLOUD_NAME_CLOUDINARY=
+API_KEY_CLOUDINARY=
+API_SECRET_CLOUDINARY=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
 GMAIL_USERNAME="example@mail.com"
 GMAIL_PASSWORD="password"
-GOOGLE_CLIENT_ID=your_client_id_here
-GOOGLE_CLIENT_SECRET=your_client_secret_here
+
+SECRET_KEY_BASE=
