--- a/config/database.example.yml
+++ b/config/database.example.yml
@@ -16,10 +16,11 @@
 #
 default: &default
   adapter: postgresql
+  host: <%= ENV["DB_HOST"] %>
+  username: <%= ENV["DB_USER"] %>
+  password: <%= ENV["DB_PASSWORD"] %>
   encoding: unicode
-  # For details on connection pooling, see Rails configuration guide
-  # http://guides.rubyonrails.org/configuring.html#database-pooling
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  pool: 5
 
 development:
   <<: *default
@@ -81,5 +82,3 @@ test:
 production:
   <<: *default
   database: bnativus_production
-  username: bnativus
-  password: <%= ENV['BNATIVUS_DATABASE_PASSWORD'] %>
