--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 # config/database.yml
 
 default: &default
-  adapter: <%= ENV["DB_ADAPTER"] %>
+  adapter: postgresql
   host: <%= ENV["DB_HOST"] %>
   username: <%= ENV["DB_USER"] %>
   password: <%= ENV["DB_PASSWORD"] %>
