Implement login with facebook

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,8 @@ API_SECRET_CLOUDINARY=
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
 
 GMAIL_USERNAME="example@mail.com"
 GMAIL_PASSWORD="password"
